# jscall-sharp

./: AUTHORS  COPYING  ChangeLog  INSTALL  Makefile.am  README  autogen.sh  configure.ac  jscall-sharp.pc.in  jscall.key
src/: AssemblyInfo.cs.in  ChangeLog  Makefile.am  jscall.dll.config.in  jscall.mdp  jscall.mds
src/Resources/: JSCall.js
src/jscallglue/: Makefile.am
